--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,5 +1,14 @@
 .title {
   font-size: 30px;
-  margin-bottom: 40px;
+  margin-bottom: 25px;
   color: aquamarine;
+}
+
+.register {
+  font-size: 30px;
+  border: 1px solid rgb(52, 162, 240);
+  border-radius: 15px;
+  padding: 10px;
+  background-color: rgb(167, 233, 174);
+  margin-bottom: 30px;
 }
