--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,8 +1,32 @@
-.text {
-  font-size: 15px;
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  border-top: 1px solid gray;
+  margin-top: 10px;
+  padding: 8px 0;
+  min-width: 100%;
+  line-height: 1.2em;
+  font-size: 12px;
+  text-align: center;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.8),
+      rgba(46, 47, 66, 0.9)
+    ),
+    url('../../img/1678920504_bogatyr-club-p-fon-simvoli-foni-vkontakte-10.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
-.container {
-  border-top: 1px solid white;
-  margin-top: 25px;
+.linkedin {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+.icon {
+  padding: 5px;
 }
