--- a/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/src/components/RegistrationForm/RegistrationForm.module.css
@@ -3,7 +3,7 @@
     linear-gradient(360deg, rgba(48, 52, 90, 0.5), rgba(65, 255, 245, 0.4));
   position: relative;
   margin: 0 auto;
-  margin-top: 180px;
+  margin-top: 100px;
   max-width: 380px;
   padding: 12px;
   border-radius: 16px;
@@ -12,7 +12,7 @@
 }
 
 .label {
-  margin-left: 16px;
+  margin: 0px 16px;
   color: rgb(172, 177, 177);
 }
 
@@ -27,7 +27,7 @@
   color-scheme: light dark;
   border: none;
   outline: none;
-  padding: 8px 12px;
+  padding: 1px;
   width: 100%;
   height: 50px;
   border-top-left-radius: 8px;
