--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -1,3 +1,51 @@
+.searchBox {
+  position: relative;
+  overflow: visible;
+  background: rgba(50, 36, 59)
+    linear-gradient(360deg, rgba(48, 52, 90, 0.5), rgba(65, 255, 245, 0.4));
+  border-top-left-radius: 16px;
+  margin: 0 auto;
+  margin-top: 30px;
+  border-top-right-radius: 16px;
+  text-align: left;
+  max-width: 380px;
+  padding: 12px;
+  box-shadow: 0px 2px 4px rgba(22, 22, 22, 0.87);
+}
+.wrapperInput {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  margin-bottom: 1px;
+}
+span {
+  color: rgb(172, 177, 177);
+  display: block;
+  margin-left: 16px;
+}
+.input {
+  font-style: italic;
+
+  background-color: #181818;
+  color-scheme: light dark;
+  border: none;
+  outline: none;
+  padding: 5px 12px;
+  width: 100%;
+  height: 50px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  font-size: 20px;
+  color: rgb(172, 177, 177);
+  border: 1px solid transparent;
+  transition: all 250ms ease-in-out;
+  box-shadow: inset 2px 2px 4px rgb(10, 10, 10);
+}
+.input:hover,
+.input:focus {
+  background-color: #3b4f58;
+}
+
 .formContainer {
   max-height: 0;
   overflow: hidden;
@@ -9,4 +57,30 @@
   max-height: 300px;
   opacity: 1;
   transition: max-height 0.5s ease-in, opacity 0.3s ease-in;
+}
+.btnAdd {
+  background-color: inherit;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  min-width: 40px;
+  height: 40px;
+  transition: all 250ms ease-in-out;
+  border: none;
+  z-index: 50;
+}
+
+.btnAdd:focus {
+  box-shadow: inset 2px 2px 4px rgb(10, 10, 10);
+  background: rgba(26, 31, 30, 0.2)
+    linear-gradient(360deg, rgba(18, 19, 19, 0.5), rgba(106, 240, 233, 0.4));
+}
+.icon {
+  stroke: rgb(172, 177, 177);
+  transition: transform 250ms ease-in-out;
+}
+.icon:hover,
+.icon:focus {
+  transform: scale(1.08);
 }
