--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -10,11 +10,10 @@
   font-size: 12px;
   text-align: center;
   background-image: linear-gradient(
-      to bottom,
-      rgba(46, 47, 66, 0.8),
-      rgba(46, 47, 66, 0.9)
-    ),
-    url('../../img/1678920504_bogatyr-club-p-fon-simvoli-foni-vkontakte-10.jpg');
+    to bottom,
+    rgba(46, 47, 66, 0.8),
+    rgba(46, 47, 66, 0.9)
+  );
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
